--- a/demo/src/styles/App.scss
+++ b/demo/src/styles/App.scss
@@ -122,7 +122,15 @@ body {
       margin-left: 10px;
     }
   }
-
+  .block-custom {
+    display: flex;
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #545454;
+    > span {
+      margin-left: 10px;
+    }
+  }
   &.rtl {
     direction: rtl;
     text-align: right;
